package edu.fiuba.algo3.modelo;

public class TarjetaPais {
    private String nombre;
    private String simbolo;

    public TarjetaPais(String nombrePais, String unSimbolo){
        this.nombre = nombrePais;
        this.simbolo = unSimbolo;
    }
}
